# huadb

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: build.yml
cmake/: enable_cmp0048.cmake
src/: CMakeLists.txt  client.cpp  shell.cpp
src/binder/: CMakeLists.txt  binder.cpp  binder.h  expression.h  node_tag_to_string.cpp  order_by.h  statement.h  table_ref.h
src/binder/expressions/: aggregate_expression.h  alias_expression.h  binary_op_expression.h  column_ref_expression.h  const_expression.h  expressions.h  func_call_expression.h  list_expression.h  null_test_expression.h  star_expression.h  type_cast_expression.h  unary_op_expression.h
src/binder/statements/: analyze_statement.h  checkpoint_statement.h  create_database_statement.h  create_index_statement.h  create_table_statement.h  delete_statement.h  drop_database_statement.h  drop_index_statement.h  drop_table_statement.h  explain_statement.h  insert_statement.h  lock_statement.h  select_statement.h  statements.h  transaction_statement.h  update_statement.h  vacuum_statement.h  variable_set_statement.h  variable_show_statement.h
src/binder/table_refs/: base_table_ref.h  cross_join_ref.h  expression_list_ref.h  join_ref.h  table_refs.h
src/catalog/: CMakeLists.txt  catalog.h  column_definition.cpp  column_definition.h  column_list.cpp  column_list.h  oid_manager.cpp  oid_manager.h  simple_catalog.cpp  simple_catalog.h  system_catalog.cpp  system_catalog.h  system_schema.h
src/common/: CMakeLists.txt  bitmap.cpp  bitmap.h  constants.h  exceptions.h  result_writer.h  string_util.cpp  string_util.h  type.cpp  type.h  type_util.cpp  type_util.h  typedefs.h  types.h  value.cpp  value.h
src/database/: CMakeLists.txt  connection.cpp  connection.h  database_engine.cpp  database_engine.h
src/executors/: CMakeLists.txt  aggregate_executor.cpp  aggregate_executor.h  delete_executor.cpp  delete_executor.h  executor.h  executor_context.h  executor_factory.h  filter_executor.cpp  filter_executor.h  hash_join_executor.cpp  hash_join_executor.h  insert_executor.cpp  insert_executor.h  limit_executor.cpp  limit_executor.h  lock_rows_executor.cpp  lock_rows_executor.h  merge_join_executor.cpp  merge_join_executor.h  nested_loop_join_executor.cpp  nested_loop_join_executor.h  orderby_executor.cpp  orderby_executor.h  projection_executor.cpp  projection_executor.h  seqscan_executor.cpp  seqscan_executor.h  update_executor.cpp  update_executor.h  values_executor.cpp  values_executor.h
src/log/: CMakeLists.txt  log_manager.cpp  log_manager.h  log_record.cpp  log_record.h
src/log/log_records/: CMakeLists.txt  begin_checkpoint_log.cpp  begin_checkpoint_log.h  begin_log.cpp  begin_log.h  commit_log.cpp  commit_log.h  delete_log.cpp  delete_log.h  end_checkpoint_log.cpp  end_checkpoint_log.h  insert_log.cpp  insert_log.h  log_records.h  new_page_log.cpp  new_page_log.h  rollback_log.cpp  rollback_log.h
src/operators/: aggregate_operator.h  delete_operator.h  filter_operator.h  hash_join_operator.h  index_scan_operator.h  insert_operator.h  limit_operator.h  lock_rows_operator.h  merge_join_operator.h  nested_loop_join_operator.h  operator.h  operators.h  orderby_operator.h  projection_operator.h  seqscan_operator.h  update_operator.h  values_operator.h
src/operators/expressions/: arithmetic.h  column_value.h  comparison.h  const.h  expression.h  expressions.h  func_call.h  list.h  logic.h  null_test.h  type_cast.h
src/optimizer/: CMakeLists.txt  optimizer.cpp  optimizer.h
src/planner/: CMakeLists.txt  planner.cpp  planner.h
src/storage/: CMakeLists.txt  buffer_pool.cpp  buffer_pool.h  buffer_strategy.h  disk.cpp  disk.h  lru_buffer_strategy.cpp  lru_buffer_strategy.h  page.cpp  page.h
src/table/: CMakeLists.txt  record.cpp  record.h  record_header.cpp  record_header.h  table.cpp  table.h  table_page.cpp  table_page.h  table_scan.cpp  table_scan.h
src/transaction/: CMakeLists.txt  lock_manager.cpp  lock_manager.h  transaction_manager.cpp  transaction_manager.h
test/: CMakeLists.txt  sqllogicparser.cpp  sqllogicparser.h  sqllogictest.cpp
test/lab0/: 10-basic.test  20-expression.test  30-set_and_show.test  40-error.test
test/lab1/: 10-insert.test  20-delete.test  30-update.test  40-database.test  50-buffer_pool.test
test/lab2/: 10-rollback.test  20-recover.test  30-aries.test
test/lab3/: 10-halloween.test  20-mvcc_insert.test  21-mvcc_delete.test  (+7 more)
(+7 files in other folders)
